force-app/main/default/objects/Work_Order_Contact_Role__c/Work_Order_Contact_Role__c.object-meta.xml
<CustomObject>
    <label>Work Order Contact Role</label>
    <nameField>
        <displayFormat>WOCR-{00000}</displayFormat>
        <label>Work Order Contact Role Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Contact Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>