force-app/main/default/objects/Work_Order_Contact_Role__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Order Contact Roles</relationshipLabel>
    <relationshipName>Work_Order_Contact_Roles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>