force-app/main/default/objects/Work_Order_Contact_Role__c/fields/IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>IsPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPrimary</label>
    <type>Checkbox</type>
</CustomField>