force-app/main/default/objects/Work_Order_Contact_Role__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Work Order Contact Roles</relationshipLabel>
    <relationshipName>Work_Order_Contact_Roles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>